[gd_scene load_steps=14 format=2]

[ext_resource path="res://Resouces/Particles/HollowCross.png" type="Texture" id=1]
[ext_resource path="res://Boss/BossBullet.gd" type="Script" id=2]
[ext_resource path="res://Resouces/Particles/SmallPoint.png" type="Texture" id=3]
[ext_resource path="res://Combat/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Resouces/ShaderTextures/Noise5.png" type="Texture" id=5]
[ext_resource path="res://Boss/SFX_Moon_Projectile_Whiz.wav" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 10.0499

[sub_resource type="Shader" id=113]
code = "shader_type canvas_item;
uniform vec2 scrollSpeed = vec2(1.0,1.0);
uniform sampler2D texture2;
uniform sampler2D gradient;
uniform float FPS = 30.0;
uniform float col1bonus = 0.0;
uniform float col2bonus = 0.0;


void fragment(){
	float color1 = col1bonus + texture(TEXTURE, UV).r;
	float color2 = col2bonus + texture(texture2, UV + scrollSpeed * round(TIME*(FPS)) ).r;
	float energ = color1 * color2 ;
	COLOR = texture(gradient, vec2(energ));
	COLOR.a = texture(TEXTURE, UV).a;
}"

[sub_resource type="Gradient" id=110]
interpolation_mode = 1
offsets = PoolRealArray( 0, 0.393548, 0.683871, 0.819355 )
colors = PoolColorArray( 0, 0, 0, 0, 0, 0, 0, 1, 0.368195, 0, 0.371094, 1, 0.98083, 0.53064, 0.984375, 1 )

[sub_resource type="GradientTexture" id=111]
gradient = SubResource( 110 )
width = 20

[sub_resource type="ShaderMaterial" id=112]
shader = SubResource( 113 )
shader_param/scrollSpeed = Vector2( -0.05, 0.5 )
shader_param/FPS = 12.0
shader_param/col1bonus = -0.373
shader_param/col2bonus = 0.31
shader_param/texture2 = ExtResource( 5 )
shader_param/gradient = SubResource( 111 )

[sub_resource type="CircleShape2D" id=2]
radius = 12.0

[sub_resource type="CircleShape2D" id=114]
radius = 66.9104

[node name="BossBullet" type="RigidBody2D"]
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0
can_sleep = false
linear_damp = 2.0
script = ExtResource( 2 )

[node name="Glow" type="Sprite" parent="."]
modulate = Color( 0.968627, 0, 0.341176, 1 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="BigPoint" type="Sprite" parent="."]
material = SubResource( 112 )
texture = ExtResource( 1 )

[node name="OrphanTimer" type="Timer" parent="."]
wait_time = 12.0
one_shot = true
autostart = true

[node name="ArmTimer" type="Timer" parent="."]
wait_time = 2.7
one_shot = true
autostart = true

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 2 )

[node name="Whiz" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
pitch_scale = 1.84
bus = "Effects"

[node name="WhizDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="WhizDetector"]
shape = SubResource( 114 )

[connection signal="timeout" from="OrphanTimer" to="." method="_on_OrphanTimer_timeout"]
[connection signal="timeout" from="ArmTimer" to="." method="_on_ArmTimer_timeout"]
[connection signal="body_entered" from="WhizDetector" to="." method="_on_WhizDetector_body_entered"]
